# outpost-devicetree

./: README.md  meson.build
dts/manufacturer/st/h7/: stm32h7.dtsi  stm32h743.dtsi
include/dt-bindings/memory-attr/: memory-attr-arm.h  memory-attr.h
